Grammar/tests/unity/success/function-procedure-start-1.top
function int functionName () {
    functionName();
    anyVar = functionName();
    return;
}

procedure procedureName () {
    functionName();
    anyVar = functionName();
}

start() {
    procedureName();
}