Grammar/tests/unity/error/function-typo.top
funtion int functionName () {
    functionName();
    anotherVar = functionName();
    return anything;
}